# OnLab

./: .dockerignore  Dockerfile  compose.yaml  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
frontend/: index.html  script.js
frontend/js/: checker.js  gui.js
src/OnLab/: ai_tools.py  config.py  gigachat.py  logger.py  main.py  models.py  preprocessor.py  routes.py
src/OnLab/backend/: main.py
src/OnLab/backend/ai/: giga_engine.py
src/OnLab/backend/api/: routes.py
src/OnLab/backend/models/: process.py  responses.py
src/OnLab/frontend/: index.html  main.js  style.css
tests/: preprocessor_test.py
